stretch goal: made navbar fixed with .95 opacity

--- a/css/index.css
+++ b/css/index.css
@@ -168,6 +168,7 @@ p {
   height: 100px;
   background-color: #F6F6F6;
   position: fixed;
+  opacity: 0.95;
 }
 .main-navigation .nav-container {
   height: 100%;
@@ -190,10 +191,6 @@ p {
   margin: 0px 17px;
   text-decoration: none;
   font-size: 1.5em;
-}
-.main-navigation .nav-container .nav a a:visited {
-  text-decoration: none;
-  color: red;
 }
 footer {
   color: #22283B;
