--- a/less/navigation.less
+++ b/less/navigation.less
@@ -5,6 +5,8 @@
     height: 100px;
     background-color: @nav-bg;
     position: fixed;
+    opacity: 0.95;
+    
 
     .nav-container {
         height: 100%;
@@ -35,14 +37,40 @@
                 text-decoration: none;
                 font-size: 1.5em;
 
-                a:visited { text-decoration: none; color:red; }
+                // a:visited { text-decoration: none; color:red; }
+
+                // a::before {
+                //     content: '';
+                //     position: absolute;
+                //     z-index: -1;
+                //     width: 36%;
+                //     transform: scaleX(0);
+                //     height: 2px;
+                //     bottom: 0;
+                //     left: 1;
+                //     background-color: #F33910;
+                //     transform-origin: bottom right;
+                //     transition: transform 0.25s ease-out;
+                // }
+                
+                // // header .products::before {
+                // //     width: 46%;  
+                // // }
+                
+                // // header .blog::before {
+                // //     width: 30%;  
+                // // }
+                
+                // // header .contact::before {
+                // //     width: 43%;  
+                // // }
+                
+                
+                // a:hover::before {
+                //     transform: scaleX(1);
+                //     transform-origin: bottom left;
+                // } 
             }
         }
     }
 }
-
-
-  
-  
-  
-  // .main-navigation
